# ai-commit

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cog.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs  providers.rs  providers_test.rs
