[package]
name = "ai-commit"
version = "0.1.0"
edition = "2021"
description = "AI Commit is a command-line tool that generates commit messages using AI. It supports multiple AI providers and models to help you create meaningful and consistent commit messages for your Git repositories."
license = "MIT"
authors = ["Egor Glukhikh <eagluhih@gmail.com>"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
strum = { version = "0.24", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
mockito = "1"

[build-dependencies]
built = "0.6"
