[package]
name = "ai-commit"
version = "0.1.0"
edition = "2021"
description = "AI Commit is a command-line tool that generates commit messages using AI. It supports multiple AI providers and models to help you create meaningful and consistent commit messages for your Git repositories."
license = "MIT"
repository = "https://github.com/EgorHenek/ai-commit"
authors = ["Egor Glukhikh <eagluhih@gmail.com>"]

[package.metadata.bininstall]
pkg-url = "{ repo }/releases/download/{version}/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
strum = { version = "0.24", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
mockito = "1"

[build-dependencies]
built = "0.6"
